--- a/docs/assets/common.css
+++ b/docs/assets/common.css
@@ -1,3 +1,53 @@
+@font-face {
+  font-family: "Hiragino Sans";
+  src: local(HiraginoSans-W0);
+  font-weight: 100;
+}
+@font-face {
+  font-family: "Hiragino Sans";
+  src: local(HiraginoSans-W1);
+  font-weight: 200;
+}
+@font-face {
+  font-family: "Hiragino Sans";
+  src: local(HiraginoSans-W2);
+  font-weight: 300;
+}
+@font-face {
+  font-family: "Hiragino Sans";
+  src: local(HiraginoSans-W3);
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Hiragino Sans";
+  src: local(HiraginoSans-W4);
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Hiragino Sans";
+  src: local(HiraginoSans-W5);
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Hiragino Sans";
+  src: local(HiraginoSans-W6);
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Hiragino Sans";
+  src: local(HiraginoSans-W7);
+  font-weight: 800;
+}
+@font-face {
+  font-family: "Hiragino Sans";
+  src: local(HiraginoSans-W8);
+  font-weight: 900;
+}
+@font-face {
+  font-family: "Hiragino Sans W9";
+  src: local(HiraginoSans-W9);
+  font-weight: 900;
+}
 * {
   margin: 0;
   padding: 0;
@@ -7,59 +57,168 @@ body {
   width: 100%;
   height: 100%;
 }
-body > .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+body {
+  font-family: "Hiragino Sans", sans-serif;
+  font-weight: 400;
+}
+ul,
+ol {
+  list-style-type: none;
+}
+.container {
+  position: relative;
   width: 100%;
   height: 100%;
-  background: #555;
 }
-body > .container > .virtual-device {
-  overflow-y: scroll;
-  width: 360px;
-  height: 640px;
-  background: #fff;
-}
-@media (max-width: 640px) {
-  body > .container > .virtual-device {
-    overflow-y: auto;
-    width: 100%;
-    height: 100%;
-  }
-}
-body > .container > .virtual-device .map-canvas {
-  width: 100%;
-  height: 100%;
-  background: #87ceeb;
-}
-body > .container > .virtual-device .nav-header {
+.navbar {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-}
-body > .container > .virtual-device .nav-header .btn-light {
-  position: relative;
-  width: 50px;
   height: 50px;
-  background: rgba(255,255,255,0.5);
-  border: 1px solid rgba(255,255,255,0.7);
-  box-shadow: 0 0 3px rgba(0,0,0,0.4);
-  line-height: 50px;
+}
+.navbar .left {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.navbar .center {
+  margin: 0 auto;
+}
+.navbar .right {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.navbar .notices {
+  width: 80px;
+  height: 50px;
+}
+.navbar .notices .budge {
+  position: absolute;
   text-align: center;
+  line-height: 50px;
+  width: 80px;
+  height: 50px;
+  color: #fff;
+  font-size: 13px;
+  font-weight: 200;
+  z-index: 1;
+}
+.navbar .notices .icon {
+  position: absolute;
+  top: -2.5px;
+  left: 0;
+  display: block;
+  width: 80px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  font-size: 40px;
+  color: rgba(51,51,51,0.95);
+}
+.navbar .modes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 250px;
+  height: 50px;
+  margin: 0 auto;
+}
+.navbar .modes li {
+  width: 70px;
+  margin: 0 5px;
+  text-align: center;
+  line-height: 32px;
+  font-size: 14px;
+  color: rgba(34,34,34,0.6);
+  font-weight: 600;
+}
+.navbar .modes li.active {
+  border-bottom: 3px solid #222;
+  font-weight: 800;
   color: #222;
 }
-body > .container > .virtual-device .nav-header .btn-light::after {
-  content: '現在地';
-  position: absolute;
-  left: 0;
-  bottom: -20px;
-  width: 100%;
-  height: 20px;
-  line-height: 20px;
+.navbar .menu-icon {
+  width: 60px;
+  height: 50px;
+  line-height: 50px;
   text-align: center;
-  font-size: 15px;
+  font-size: 26px;
+  color: rgba(51,51,51,0.8);
+}
+.call-btn {
+  position: absolute;
+  bottom: 30px;
+  left: 10px;
+  right: 10px;
+  width: auto;
+  height: 70px;
+  background: #fd1a99;
+  color: #fff;
+}
+.call-btn .label {
+  display: block;
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 22px;
+  letter-spacing: 0.2em;
+  text-indent: 0.2em;
+}
+.call-btn .icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 70px;
+  height: 70px;
+  line-height: 70px;
+  text-align: center;
+  font-size: 25px;
+}
+.info-box {
+  position: absolute;
+  top: 60px;
+  left: 10px;
+  height: 50px;
+  padding: 0 12px;
+  background: #fff;
+  box-sizing: border-box;
+  border: 2px solid #fd1a99;
+}
+.info-box .icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 50px;
+  height: 50px;
+  color: #fd1a99;
+  text-align: center;
+  line-height: 50px;
+  font-size: 20px;
+}
+.info-box .message {
+  padding-left: 25px;
+  line-height: 50px;
+  font-size: 13px;
+  font-weight: 600;
+  color: #555;
+}
+.info-box .message .bold {
+  margin: 0 4px;
+  font-size: 18px;
+  color: #000;
+}
+.map-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
 }
 
 /*# sourceMappingURL=common.css.map */
